Add demo handlers and rewrite poetry conf

--- a/front/index.html
+++ b/front/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Rell</title>
+    <title>Cloud-storage</title>
 </head>
 <body>
+    <h2>Welcome to Cloud-storage!</h2>
     <button onclick="onClockButton(this)">Push me!</button>
     <script src="js/main.js"></script>
 </body>
